# scoped-heed

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  fix_emptiness_checker.sh  fix_is_scope_empty_in_db.sh  update_doctests.sh
.cargo/: config.toml
benches/: key_encoding_benchmark.rs  scope_enum_benchmark.rs
examples/: README.md  basic_usage.rs  bytes_optimization.rs  error_handling.rs  generic_transaction_test.rs  iteration_patterns.rs  legacy_compatibility.rs  multi_tenant.rs  parallel_processing.rs  performance_optimizations.rs  pure_bytes.rs  range_performance.rs  range_test.rs  scope_management.rs  scoped_demo.rs  test_isolation.rs
src/: builder.rs  global_registry.rs  lib.rs  scope.rs  scope_registry.rs  scoped_bytes_database.rs  scoped_bytes_key_database.rs  scoped_database.rs  utils.rs
tests/: global_registry_test.rs  integration_test.rs  max_hash_test.rs  scope_enum_test.rs  scope_isolation_test.rs
