[package]
name = "scoped-heed"
version = "0.1.0"
edition = "2024"
description = "Redis-like database isolation for LMDB via heed - provides completely isolated scopes within a single environment"
license = "MIT OR Apache-2.0"
repository = "https://github.com/verse-pbc/scoped-heed"
readme = "README.md"
keywords = ["lmdb", "heed", "database", "scope", "isolation"]
categories = ["database", "data-structures"]
documentation = "https://docs.rs/scoped-heed"
homepage = "https://github.com/verse-pbc/scoped-heed"

[dependencies]
heed = { version = ">=0.20, <0.23", default-features = false, features = ["serde-bincode"] }
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
bincode = "1.3"

[[example]]
name = "basic_usage"

[[example]]
name = "bytes_optimization"

[[example]]
name = "pure_bytes"

[[example]]
name = "multi_tenant"

[[example]]
name = "test_isolation"

[[example]]
name = "range_performance"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "key_encoding_benchmark"
harness = false